solve challenge without stretch goal

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,21 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  isolation: isolate;
 }
 
-.maxWidthWrapper {
+.perspectiveBar {
+  display: block;
+  width: 100%;
+  top: 60%;
+  height: 40%;
+  position: fixed;
+  background-color: hsl(195deg, 20%, 86%);
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +32,13 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 140px;
+  right: 0;
+  width: calc(1024px * 0.35);
+  min-height: 500px;
 }
 
 .controlColumn {
+  width: 50%;
 }
